# luna

./: .coveragerc  .gitignore  CLAUDE.md  README.md  binaries.spec  main-aarch64-apple-darwin.spec  package.json  pnpm-lock.yaml  pytest.ini  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
coverage/: coverage-final.json  index.html
coverage/luna-tauri/: index.html  installed.js.html
hooks/: hook-en_core_web_sm.py  hook-kokoro.py  hook-misaki.py
src/: app.ts  config.ts  index.html  main.ts  text.txt
src-python/: config.py  exceptions.py  main.py  pyproject.toml  state.py
src-python/api/: message_handlers.py  message_router.py  message_validator.py  routes.py  websocket.py
src-python/models/: schemas.py
src-python/services/: audio_players.py  audio_processor.py  ollama_service.py  tts_generator.py  tts_service.py  whisper_service.py
src-python/utils/: audio_utils.py  process_manager.py  resource_utils.py  temp_file_manager.py
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  window_ext.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  process.rs
src/modules/: animation-engine.ts  audio-manager.ts  dom-utils.ts  keyboard-handler.ts  ui-state-manager.ts  websocket-manager.ts
src/types/: index.ts
tests/: animation-engine.test.ts  audio-manager.test.ts  conftest.py  dom-utils.test.ts  keyboard-handler.test.ts  setup.ts  ui-state-manager.test.ts  websocket-manager.test.ts
tests/fixtures/: test_data.py
tests/integration/: test_full_workflow.py
tests/unit/: test_api_routes.py  (+5 more)
(+13 files in other folders)
